채용공고 fix